# lsh-experiments

./: .gitignore  LICENSE  README.md  minhash.ipynb  minhash_lsh_parameter_tuning.ipynb  pyproject.toml
lshexp/: metrics.py  minhash.py  shingle.py
