[tool.poetry]
name = "lsh-experiments"
version = "0.1.0"
description = ""
authors = ["chr1st1ank <chr1st1ank@krudewig-online.de>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
datasketch = "^1.5.5"
numpy = "^1.21.5"
Pympler = "^1.0.1"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
