[tool.poetry]
name = "lsh-experiments"
version = "0.1.0"
description = ""
authors = ["chr1st1ank <chr1st1ank@krudewig-online.de>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
datasketch = "^1.5.5"
numpy = "^1.21.5"
Pympler = "^1.0.1"
matplotlib = "^3.5.1"
jupyter = "^1.0.0"
line-profiler = "^3.3.1"
humanize = "^3.13.1"
murmurhash = "^1.0.6"
seaborn = "^0.11.2"
pandas = "^1.3.5"
nb-black = "^1.0.7"
black = "^21.12b0"
xxhash = "^2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
